# blogV2

backend/: Cargo.toml  wrangler.toml
backend/docs/: API.md
backend/src/: lib.rs  og.rs
frontend/: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend-vue/: .env.example  nuxt.config.ts  package.json
frontend-vue/assets/css/: tailwind.css
frontend-vue/components/: ArticleCard.vue  ArticleGrid.vue  ArticleThumbnail.vue  FadeIn.vue  MarkdownRenderer.vue  Pager.vue  ShareOnX.vue  SiteFooter.vue  SiteHeader.vue  TagFilter.vue
frontend-vue/composables/: useArticle.ts  useArticles.ts
frontend-vue/lib/: api.ts  markdown.ts  og.ts
frontend-vue/pages/: index.vue  list.vue
frontend-vue/pages/article/: [slug].vue
frontend-vue/server/api/articles/: [slug].get.ts  all.get.ts
frontend-vue/server/routes/: robots.txt.get.ts  sitemap.xml.get.ts
frontend-vue/server/routes/og/: [slug].get.ts
frontend-vue/server/utils/: fonts.ts  resvg.ts
frontend/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
frontend/components/: ShareOnTwitter.vue  SiteHeader.vue  TagFilter.vue
frontend/composables/: useArticles.ts  useSiteMeta.ts
frontend/layouts/: default.vue
frontend/lib/: markdown.ts  og.ts
frontend/pages/: list.vue
frontend/pages/article/: [slug].vue
frontend/server/routes/og/: [slug].get.ts
frontend/server/utils/: font-subset.ts  resvg.ts  yoga-load-shim.ts
image-optimizer/: package.json  pnpm-lock.yaml  wrangler.jsonc
image-optimizer/src/: index.ts
notion-to-md-proxy/: wrangler.jsonc
notion-to-md-proxy/src/: index.ts
